# html-to-markdown

./: .ai-rulez.yaml  .gitignore  .gitmodules  .golangci.yml  .mailmap  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  .sdkmanrc  AGENTS.md  ATTRIBUTIONS.md  BLOCK_HANDLERS_EXTRACTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEBUG_LOGGING_EXAMPLES.md  Dockerfile  FFI_ARCHITECTURE_REPORT.md  FFI_DOCUMENTATION_INDEX.md  FFI_QUICK_REFERENCE.md  FFI_VISITOR_ADAPTER_DESIGN.md  FFI_VISITOR_ARCHITECTURE_DIAGRAM.md  FFI_VISITOR_IMPLEMENTATION_EXAMPLES.md  FFI_VISITOR_README.md  FFI_VISITOR_TECHNICAL_CHALLENGES.md  GEMINI.md  INLINE_EXTRACTION_REPORT.md  INLINE_HANDLERS_EXTRACTION.md  INLINE_MODULE_EXTRACTION_GUIDE.md  INVESTIGATION_REPORT_ISSUE_166.md  README.md  README_PYPI.md  STRUCTURE.md  Taskfile.yaml  VISITOR_FFI_DEPENDENCIES.md  VISITOR_FFI_IMPLEMENTATION_GUIDE.md  VISITOR_FIX_STATUS.md  VISITOR_HELPERS_GUIDE.md  VISITOR_IMPLEMENTATION.md  (+25 more)
crates/html-to-markdown/: Cargo.toml  README.md
crates/html-to-markdown-bindings-common/: Cargo.toml
crates/html-to-markdown-bindings-common/src/: enums.rs  error.rs  inline_images.rs  json.rs  lib.rs  metadata.rs
crates/html-to-markdown-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  html-to-markdown-ffi.pc.in  html_to_markdown.h  visitor_callbacks.yaml
crates/html-to-markdown-ffi/cmake/: html-to-markdown-ffi-config-version.cmake  html-to-markdown-ffi-config.cmake
crates/html-to-markdown-ffi/examples/: visitor_usage.md
crates/html-to-markdown-ffi/include/: html_to_markdown.h
crates/html-to-markdown-ffi/src/: conversion.rs  error.rs  lib.rs  metadata.rs  profiling.rs  profiling_ffi.rs  strings.rs  tests.rs  version.rs
crates/html-to-markdown-ffi/templates/: csharp_bridge_callbacks.cs.j2  go_bridge_callbacks.go.j2  java_bridge_callbacks.java.j2  rust_ffi_callbacks.rs.j2
crates/html-to-markdown-ffi/tests/c/: Makefile  (+9 more)
crates/html-to-markdown-node/: Cargo.toml  README.md  benchmark.ts  build.rs  index.d.ts  index.js  index.spec.ts  package.json  test.js  vitest.config.ts
crates/html-to-markdown-node/src/: enums.rs  handles.rs  lib.rs  options.rs  profiling.rs  tests.rs
crates/html-to-markdown-php/: Cargo.toml
crates/html-to-markdown-php/src/: build.rs  enums.rs  lib.rs  options.rs  types.rs  visitor_support.rs
crates/html-to-markdown-py/: Cargo.toml  pyproject.toml
crates/html-to-markdown-py/src/: handles.rs  helpers.rs  lib.rs  options.rs  profiling.rs
crates/html-to-markdown-rb/: .rubocop.yml  Cargo.toml  Gemfile  README.md  Rakefile  extconf.rb  html-to-markdown-rb.gemspec
crates/html-to-markdown-rb/include/: strings.h
crates/html-to-markdown-rb/src/: lib.rs
crates/html-to-markdown-wasm/: .npmignore  Cargo.toml  README.md  benchmark.ts  index.spec.ts  package.json  vitest.config.ts
crates/html-to-markdown-wasm/scripts/: cleanup-gitignore.js  patch-bundler-entry.js
crates/html-to-markdown-wasm/src/: convert.rs  enums.rs  inline_images.rs  lib.rs  options.rs  tests.rs  wasmtime.rs
crates/html-to-markdown/examples/: basic.rs  table.rs  test_deser.rs  test_escape.rs  test_inline_formatting.rs  test_lists.rs  test_semantic_tags.rs  test_tables.rs  test_task_lists.rs  test_whitespace.rs
crates/html-to-markdown/src/: convert_api.rs  converter.rs  converter.rs.bak3  converter.rs.bak9  converter.rs.broken  converter.rs.tmp10  converter.rs.tmp11  converter.rs.tmp3  converter.rs.tmp4  converter.rs.tmp6  converter.rs.tmp7  converter.rs.tmp8  exports.rs  inline_images.rs  lib.rs  metadata.rs  options.rs  prelude.rs  rcdom.rs  safety.rs  sanitizer.rs  text.rs  validation.rs  visitor.rs  visitor_helpers.rs  wrapper.rs
crates/html-to-markdown/tests/: async_visitor_test.rs  br_in_inline_test.rs  commonmark_compliance_test.rs  convert_with_metadata_no_frontmatter.rs  djot_output_test.rs  exclude_selectors_test.rs  hocr_compliance_test.rs  integration_test.rs  issue_121_regressions.rs  issue_127_regressions.rs  issue_128_regressions.rs  issue_131_regressions.rs  issue_134_regressions.rs  issue_139_regressions.rs  issue_140_regressions.rs  issue_143_regressions.rs  issue_145_regressions.rs  issue_146_regressions.rs  issue_166_debug.rs  issue_176_regressions.rs  issue_190_regressions.rs  issue_199_regressions.rs  issue_200_regressions.rs  issue_212_regressions.rs  issue_216_217_regressions.rs  json_ld_script_extraction.rs  lists_test.rs  plain_output_test.rs  preprocessing_tests.rs  reference_links_test.rs  sectioning_elements_test.rs  skip_images_test.rs  tables_test.rs  test_custom_elements.rs  test_issue_187.rs  test_issue_218.rs  test_issue_277.rs  test_max_depth.rs  test_nested_simple.rs  test_script_style_stripping.rs  (+4 more)
e2e/python/: conftest.py  pyproject.toml
e2e/python/tests/: conftest.py  test_conversion.py  test_edge_cases.py  test_metadata.py  test_options.py  test_real_world.py  test_result.py  test_smoke.py  test_structure.py  test_visitor.py
e2e/rust/: Cargo.toml
e2e/rust/tests/: conversion_test.rs  edge_cases_test.rs  metadata_test.rs  options_test.rs  real_world_test.rs  result_test.rs  smoke_test.rs  structure_test.rs  visitor_test.rs
test_apps/python/: __init__.py  comprehensive_test.py  pyproject.toml  smoke_test.py
test_apps/python/tests/: test_conversion.py  test_smoke.py
tests/test_apps/python/: README.md  comprehensive_test.py  pyproject.toml  smoke_test.py
tools/benchmark-harness/: Cargo.toml
tools/benchmark-harness/fixtures/: visitor_baseline.toml  visitor_callbacks.toml  visitor_complex.toml  visitor_custom.toml  wikipedia.toml
tools/benchmark-harness/src/: adapter.rs  config.rs  error.rs  fixture.rs  lib.rs  main.rs  monitoring.rs  output.rs  profiling.rs  registry.rs  runner.rs  types.rs
tools/benchmark-harness/templates/: flamegraphs.html.jinja  report.html.jinja
tools/e2e-generator/: Cargo.toml  README.md
tools/e2e-generator/src/: c.rs  csharp.rs  elixir.rs  fixtures.rs  go.rs  java.rs  main.rs  php.rs  python.rs  r.rs  ruby.rs  rust.rs  typescript.rs  wasm.rs
tools/runtime-bench/: Cargo.toml
tools/runtime-bench/src/: main.rs  monitor.rs
(+1557 files in other folders)
