[package]
name = "html-to-markdown-bindings-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared utilities for html-to-markdown language bindings"
repository.workspace = true
readme.workspace = true
keywords = ["html", "markdown", "bindings", "ffi"]
categories = ["text-processing", "parsing"]

[package.metadata.cargo-machete]
ignored = ["serde_json", "thiserror"]

[features]
default = []
full = ["metadata", "inline-images"]
metadata = ["html-to-markdown-rs/metadata"]
inline-images = ["html-to-markdown-rs/inline-images"]

[dependencies]
html-to-markdown-rs = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
