[package]
name = "html-to-markdown-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "C FFI bindings for html-to-markdown-rs"
keywords = ["html", "markdown", "ffi", "c-bindings"]
categories = ["parsing", "text-processing", "api-bindings"]

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["full"]
full = ["metadata", "visitor"]
metadata = ["html-to-markdown-rs/metadata"]
visitor = ["html-to-markdown-rs/visitor"]

[dependencies]
html-to-markdown-rs = { workspace = true, features = [
    "inline-images",
    "metadata",
    "visitor",
] }
libc = "0.2"
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.29"

[lints.rust]
unsafe_code = "allow"    # FFI requires unsafe code
missing_docs = "warn"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
multiple_crate_versions = { level = "allow", priority = 1 }
