[package]
name = "html-to-markdown-ffi"
version = "3.2.0"
edition = "2021"
license = "MIT"
description = "High-performance HTML to Markdown converter"
repository = "https://github.com/kreuzberg-dev/html-to-markdown"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
html-to-markdown-rs = { path = "../html-to-markdown", features = ["full", "metadata", "visitor", "serde", "inline-images"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cbindgen = "0.29"
