[package]
name = "html-to-markdown-node"
version = "3.3.2"
edition = "2024"
license = "MIT"
description = "High-performance HTML to Markdown converter - Node.js bindings"
repository = "https://github.com/kreuzberg-dev/html-to-markdown"
readme = false
keywords = ["html", "markdown", "converter"]
categories = ["text-processing", "web-programming"]

[lib]
crate-type = ["cdylib"]

[dependencies]
html-to-markdown-rs = { path = "../html-to-markdown", features = ["full", "metadata", "visitor", "serde", "inline-images"] }
napi = { version = "3", features = ["async"] }
napi-derive = "3"
serde_json = "1"

[build-dependencies]
napi-build = "2"
