[package]
name = "html-to-markdown-php"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "PHP extension bindings for html-to-markdown powered by ext-php-rs"
keywords = ["html", "markdown", "php", "bindings"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["full"]
full = ["metadata", "visitor"]
metadata = ["html-to-markdown-rs/metadata"]
visitor = ["html-to-markdown-rs/visitor"]
profiling = ["dep:pprof"]

[dependencies]
ext-php-rs = { workspace = true }
html-to-markdown-bindings-common = { path = "../html-to-markdown-bindings-common", version = "2.29.0", features = [
    "metadata",
    "inline-images",
] }
html-to-markdown-rs = { workspace = true, features = [
    "inline-images",
    "metadata",
    "visitor",
] }
pprof = { version = "0.15", features = ["flamegraph"], optional = true }

[lints]
workspace = true
