[package]
name = "html-to-markdown-php"
version = "3.2.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "0.15"
html-to-markdown-rs = { path = "../html-to-markdown", features = ["full", "metadata", "visitor", "serde", "inline-images"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
