[package]
name = "html-to-markdown-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Python bindings (PyO3) for html-to-markdown - high-performance HTML to Markdown converter"
keywords = ["html", "markdown", "python", "pyo3", "bindings"]
categories = ["api-bindings"]

[lib]
name = "_html_to_markdown"
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = ["full"]
full = ["metadata", "visitor", "inline-images"]
extension-module = ["pyo3/extension-module"]
inline-images = ["html-to-markdown-rs/inline-images"]
metadata = ["html-to-markdown-rs/metadata"]
visitor = ["html-to-markdown-rs/visitor"]

[dependencies]
html-to-markdown-bindings-common = { path = "../html-to-markdown-bindings-common", version = "3.1.0", features = [
    "metadata",
    "inline-images",
] }
html-to-markdown-rs = { workspace = true, features = [
    "inline-images",
    "metadata",
    "visitor",
] }
pyo3.workspace = true

[dev-dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
