[package]
name = "html-to-markdown-py"
version = "3.2.0"
edition = "2024"
license = "MIT"

[lib]
name = "_html_to_markdown"
crate-type = ["cdylib"]

[dependencies]
html-to-markdown-rs = { path = "../html-to-markdown", features = ["full", "metadata", "visitor", "serde", "inline-images"] }
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
