[package]
name = "html-to-markdown-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "HTML to Markdown conversion for WebAssembly targets"
keywords = ["html", "markdown", "wasm", "webassembly"]
categories = ["parsing", "text-processing", "wasm"]

# Publishing metadata for npm scoped package

[lints.rust]
unsafe_code = "allow"  # WASM bindings require unsafe code
missing_docs = "warn"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }

[package.metadata.wasm-pack.publish]
registry = "https://registry.npmjs.org/"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["js-bindings", "metadata", "visitor"]
js-bindings = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook", "js-sys"]
metadata = ["html-to-markdown-rs/metadata"]
visitor = ["html-to-markdown-rs/visitor"]
wasmtime-testing = []

[dependencies]
html-to-markdown-rs = { workspace = true, features = ["inline-images", "metadata", "visitor"] }
html-to-markdown-bindings-common = { path = "../html-to-markdown-bindings-common", version = "2.22.6", features = ["metadata", "inline-images"] }
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
