[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68", "wheel"]

[project]
name = "html-to-markdown-e2e-tests"
version = "0.0.0"
description = "End-to-end tests"
requires-python = ">=3.10"
dependencies = ["html-to-markdown", "pytest>=7.4", "pytest-asyncio>=0.23", "pytest-timeout>=2.1"]

[tool.uv.sources]
html-to-markdown = { path = "../../packages/python", editable = true }

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
timeout = 300
