[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68" ]

[project]
name = "html-to-markdown-test-app"
version = "1.0.0"
description = "Test app for html-to-markdown Python package"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "html-to-markdown==2.28.3",
  "pytest>=8",
  "pytest-asyncio>=1.3",
  "pytest-cov>=4.1",
]

[tool.setuptools]
packages = []
py-modules = []

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.python_files = [ "*_test.py", "test_*.py" ]
