[package]
name = "benchmark-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark harness for html-to-markdown-rs"
keywords = ["html", "markdown", "benchmark", "performance"]
categories = ["development-tools"]
readme = "README.md"


[lints]
workspace = true

[[bin]]
name = "benchmark-harness"
path = "src/main.rs"

[dependencies]
html-to-markdown-rs = { workspace = true, features = ["inline-images", "metadata"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

toml = "0.9"

sysinfo = "0.36"

minijinja = { version = "2.14", features = ["json"] }

pprof = { version = "0.15", features = ["flamegraph"], optional = true }
tikv-jemallocator = { version = "0.6", optional = true }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"], optional = true }

[features]
default = []
profiling = ["pprof"]
memory-profiling = ["tikv-jemallocator", "tikv-jemalloc-ctl"]
visitor = ["html-to-markdown-rs/visitor"]
