[package]
name = "html-to-markdown-e2e-generator"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "html-to-markdown-e2e-generator"
path = "src/main.rs"

[dependencies]
anyhow = "1"
camino = "1.2"
clap = { version = "4", features = ["derive"] }
itertools = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
