[package]
categories = ["development-tools::testing"]
description = "E2E test generator for html-to-markdown"
edition.workspace = true
keywords = ["testing", "e2e"]
license.workspace = true
name = "html-to-markdown-e2e-generator"
repository.workspace = true
version.workspace = true
readme = "README.md"

[[bin]]
name = "html-to-markdown-e2e-generator"
path = "src/main.rs"

[dependencies]
anyhow = "1"
camino = "1.2"
clap = { workspace = true, features = ["derive"] }
itertools = "0.14"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
walkdir = "2.5"
