[package]
name = "runtime-bench"
version = "2.9.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { workspace = true, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
humansize = "2.1"
thiserror = "2.0"
sysinfo = "0.37"
html-to-markdown-rs = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
pprof = { version = "0.15", features = ["flamegraph"] }
